--- a/index.html
+++ b/index.html
@@ -2,41 +2,41 @@
 <html>
     <head>
         <title>Slider ---by CoSu</title>
-        <link rel="shortcut icon" href="imper.png" type="image/png">
+        <link rel="shortcut icon" href="./imper.png" type="image/png">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="MobileOptimized" content="320"/>
         <meta name="format-detection" content="telephone=no">
-        <link rel="stylesheet" href="css/canvas.css" type="text/css" />
-        <link rel="stylesheet" href="css/toolbar.css" type="text/css" />
-        <link rel="stylesheet" href="css/stylebar.css" type="text/css" />
-        <link rel="stylesheet" href="css/shapebar.css" type="text/css" />
-        <link rel="stylesheet" href="css/main.css" type="text/css" />
-        <link rel="stylesheet" href="css/view.css" type="text/css" />
-        <link rel="stylesheet" href="css/animation.css" type="text/css" />
-        <link rel="stylesheet" href="css/preview.css" type="text/css" />
-        <link rel="stylesheet" href="css/codemirror.css" type="text/css" />
-        <link rel="stylesheet" href="css/cm.theme.css" type="text/css" />
-        <link rel="stylesheet" href="css/introjs.css" type="text/css" />
-        <script type="text/javascript" src="web.fs.mobile/src/lib/underscore.js"></script>
-        <script type="text/javascript" src="web.fs.mobile/src/lib/zepto.js"></script>
-        <script type="text/javascript" src="js/lib/codemirror/codemirror.js"></script>
-        <script type="text/javascript" src="js/lib/codemirror/cm.theme.js"></script>
-        <script type="text/javascript" src="js/lib/bowser/bowser.js"></script>
-        <script type="text/javascript" src="js/lib/paintBoard/drawJS.js"></script>
-        <script type="text/javascript" src="js/common/config.js"></script>
-        <script type="text/javascript" src="js/util/json.js"></script>
-        <script type="text/javascript" src="js/util/colorboard.js"></script>
-        <script type="text/javascript" src="js/util/screenboard.js"></script>
-        <script type="text/javascript" src="js/util/chooseBox.js"></script>
-        <script type="text/javascript" src="js/util/imageselector.js"></script>
-        <script type="text/javascript" src="js/util/util.js"></script>
-        <script type="text/javascript" src="js/util/altbox.js"></script>
-        <script type="text/javascript" src="js/core.js"></script>
-        <script type="text/javascript" src="js/sandbox.js"></script>
-        <script type="text/javascript" src="js/intro.js"></script>
-        <link rel="stylesheet" type="text/css" href="web.fs.mobile/src/theme/ui.css">
-        <link rel="stylesheet" type="text/css" href="web.fs.mobile/src/sui/sui.css">
+        <link rel="stylesheet" href="./css/canvas.css" type="text/css" />
+        <link rel="stylesheet" href="./css/toolbar.css" type="text/css" />
+        <link rel="stylesheet" href="./css/stylebar.css" type="text/css" />
+        <link rel="stylesheet" href="./css/shapebar.css" type="text/css" />
+        <link rel="stylesheet" href="./css/main.css" type="text/css" />
+        <link rel="stylesheet" href="./css/view.css" type="text/css" />
+        <link rel="stylesheet" href="./css/animation.css" type="text/css" />
+        <link rel="stylesheet" href="./css/preview.css" type="text/css" />
+        <link rel="stylesheet" href="./css/codemirror.css" type="text/css" />
+        <link rel="stylesheet" href="./css/cm.theme.css" type="text/css" />
+        <link rel="stylesheet" href="./css/introjs.css" type="text/css" />
+        <script type="text/javascript" src="./web.fs.mobile/src/lib/underscore.js"></script>
+        <script type="text/javascript" src="./web.fs.mobile/src/lib/zepto.js"></script>
+        <script type="text/javascript" src="./js/lib/codemirror/codemirror.js"></script>
+        <script type="text/javascript" src="./js/lib/codemirror/cm.theme.js"></script>
+        <script type="text/javascript" src="./js/lib/bowser/bowser.js"></script>
+        <script type="text/javascript" src="./js/lib/paintBoard/drawJS.js"></script>
+        <script type="text/javascript" src="./js/common/config.js"></script>
+        <script type="text/javascript" src="./js/util/json.js"></script>
+        <script type="text/javascript" src="./js/util/colorboard.js"></script>
+        <script type="text/javascript" src="./js/util/screenboard.js"></script>
+        <script type="text/javascript" src="./js/util/chooseBox.js"></script>
+        <script type="text/javascript" src="./js/util/imageselector.js"></script>
+        <script type="text/javascript" src="./js/util/util.js"></script>
+        <script type="text/javascript" src="./js/util/altbox.js"></script>
+        <script type="text/javascript" src="./js/core.js"></script>
+        <script type="text/javascript" src="./js/sandbox.js"></script>
+        <script type="text/javascript" src="./js/intro.js"></script>
+        <link rel="stylesheet" type="text/css" href="./web.fs.mobile/src/theme/ui.css">
+        <link rel="stylesheet" type="text/css" href="./web.fs.mobile/src/sui/sui.css">
         <style type="text/css">
             .nav-bar {height: 45px;background-color: black;position: fixed;top: 0px;width: 100%;}
             .nav-button {height: 100%;width: 80px;border: none;
@@ -57,9 +57,9 @@
                 <div id="fileView" class="fs-view fs-theme-android"></div>
                 <!-- Bottom Menu Bar -->
                 <div id="fileBar" class="fs-bar">
-                    <a id="addFolder" data-feed='true' class="fs-bar-btn" href="javascript:;">创建目录</a>
-                    <a id="showDeleteIcon" data-feed='true' class="fs-bar-icon" href="javascript:;"></a>
-                    <a id="addFile" data-feed='true' class="fs-bar-btn" href="javascript:;" >另存为</a>
+                    <a id="addFolder" data-feed='true' class="fs-bar-btn" href="./javascript:;">创建目录</a>
+                    <a id="showDeleteIcon" data-feed='true' class="fs-bar-icon" href="./javascript:;"></a>
+                    <a id="addFile" data-feed='true' class="fs-bar-btn" href="./javascript:;" >另存为</a>
                 </div>
                 <!-- Add Folder PopBox -->
                 <div class="sui-popbox sui-disp-none" data-vertical='center' data-position='fixed' data-transition=true data-cancel=true id="folderInpBox">
@@ -139,10 +139,10 @@
                     </select>
                 </div>
                 <div class="execCommand-item font-color" title="改变字体颜色">
-                    <a href="javascript:;" class="execC-but"></a>
+                    <a href="./javascript:;" class="execC-but"></a>
                 </div>
                 <div class="execCommand-item font-background" title="改变字体背景颜色">
-                    <a href="javascript:;" class="execC-but"></a>
+                    <a href="./javascript:;" class="execC-but"></a>
                 </div>
                 <div class="execCommand-item font-formatblock" title="段落">
                     <select class="execC-but" onchange="if(this.value!=-1) document.execCommand('formatBlock',false,this.value);">
@@ -158,50 +158,50 @@
                     </select>
                 </div>
                 <div class="execCommand-item font-italic" title="斜体">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('italic',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('italic',false);"></a>
                 </div>
                 <div class="execCommand-item font-bold" title="粗体">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('bold',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('bold',false);"></a>
                 </div>
                 <div class="execCommand-item font-underline" title="下划线">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('underline',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('underline',false);"></a>
                 </div>
                 <div class="execCommand-item font-strike" title="删除线">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('strikeThrough',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('strikeThrough',false);"></a>
                 </div>
                 <div class="execCommand-item font-eraser" title="擦除格式">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('removeFormat',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('removeFormat',false);"></a>
                 </div>
                 <div class="execCommand-item font-link" title="添加链接">
-                    <a href="javascript:;" class="execC-but" ></a>
+                    <a href="./javascript:;" class="execC-but" ></a>
                 </div>
                 <div class="execCommand-item font-leftAlign" title="左对齐">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('justifyLeft',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('justifyLeft',false);"></a>
                 </div>
                 <div class="execCommand-item font-centerAlign" title="居中对齐">
-                    <a href="javascript:;" class="execC-but"  onclick="document.execCommand('justifyCenter',false);"></a>
+                    <a href="./javascript:;" class="execC-but"  onclick="document.execCommand('justifyCenter',false);"></a>
                 </div>
                 <div class="execCommand-item font-rightAlign" title="右对齐">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('justifyRight',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('justifyRight',false);"></a>
                 </div>        
                 <div class="execCommand-item font-undo" title="撤销">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('undo',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('undo',false);"></a>
                 </div>
                 <div class="execCommand-item font-redo" title="重做" >
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('redo',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('redo',false);"></a>
                 </div> 
                 
                 <div class="execCommand-item font-list" title="有序列表">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('insertOrderedList',true);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('insertOrderedList',true);"></a>
                 </div> 
                 <div class="execCommand-item font-unOrderList" title="无序列表">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('insertUnorderedList',true);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('insertUnorderedList',true);"></a>
                 </div>  
                 <div class="execCommand-item font-indent" title="缩进">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('indent',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('indent',false);"></a>
                 </div> 
                 <div class="execCommand-item font-outdent" title="缩进">
-                    <a href="javascript:;" class="execC-but" onclick="document.execCommand('outdent',false);"></a>
+                    <a href="./javascript:;" class="execC-but" onclick="document.execCommand('outdent',false);"></a>
                 </div> 
             </div>
             <div id="alert-box">
@@ -480,32 +480,32 @@
         <div id='mask' style="position:relative;background-color:black;width:100%;height:100%;" class="dp-none">
             <div style='position:relative;width:340px;height:100px;margin:auto;top:100px;' class='cf'>
                 <!-- chrome -->
-                <a href="http://www.google.cn/intl/zh-CN/chrome/browser/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/chrome.png);float:left;margin-right:20px' title='谷歌chrome浏览器'></a>
+                <a href="./http://www.google.cn/intl/zh-CN/chrome/browser/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/chrome.png);float:left;margin-right:20px' title='谷歌chrome浏览器'></a>
                 <!-- liebao -->
-                <a href="http://www.liebao.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/lbchrome.png);float:left;margin-right:20px' title='猎豹浏览器极速模式'></a>
+                <a href="./http://www.liebao.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/lbchrome.png);float:left;margin-right:20px' title='猎豹浏览器极速模式'></a>
                 <!-- 360 chrome -->
-                <a href="http://chrome.360.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/360chrome.png);float:left;' title='360 极速浏览器'></a>
+                <a href="./http://chrome.360.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/360chrome.png);float:left;' title='360 极速浏览器'></a>
             </div>
             <center style='position:relative;font-size:36px;color:white;top:200px;'>请使用最新版本的chrome系列极速浏览器</center>
         </div>
         <!-- cordova for mobile is used by phonegap -->
 
-        <script type="text/javascript" src="js/module/canvas.js"></script>
-        <script type="text/javascript" src="js/module/toolbar.js"></script>
-        <script type="text/javascript" src="js/module/shapebar.js"></script>
-        <script type="text/javascript" src="js/module/view.js"></script>
-        <script type="text/javascript" src="js/module/preview.js"></script>
-        <!--<script type="text/javascript" src="js/module/stylebar.js"></script>-->
-        <script type="text/javascript" src="js/module/filesystem.js"></script>
-        <!-- <script type="text/javascript" src="js/loader.js" ></script> -->
+        <script type="text/javascript" src="./js/module/canvas.js"></script>
+        <script type="text/javascript" src="./js/module/toolbar.js"></script>
+        <script type="text/javascript" src="./js/module/shapebar.js"></script>
+        <script type="text/javascript" src="./js/module/view.js"></script>
+        <script type="text/javascript" src="./js/module/preview.js"></script>
+        <!--<script type="text/javascript" src="./js/module/stylebar.js"></script>-->
+        <script type="text/javascript" src="./js/module/filesystem.js"></script>
+        <!-- <script type="text/javascript" src="./js/loader.js" ></script> -->
         <!-- UI Plugin sui is used by Android SDK H5 -->
-        <script type="text/javascript" src="web.fs.mobile/src/sui/sui.js"></script>
+        <script type="text/javascript" src="./web.fs.mobile/src/sui/sui.js"></script>
         <!-- Webfs UI Component -->
-        <script type="text/javascript" src="web.fs.mobile/src/wfui.js"></script>
+        <script type="text/javascript" src="./web.fs.mobile/src/wfui.js"></script>
         <!-- Modular By RequireJS -->
-        <script data-main="js/loader.js" src="web.fs.mobile/src/lib/require.js"></script>
+        <script data-main="js/loader.js" src="./web.fs.mobile/src/lib/require.js"></script>
         <script type="text/javascript" src='sourceMap.js'></script>
-        <script type="text/javascript" src="js/html2canvas.js"></script>
+        <script type="text/javascript" src="./js/html2canvas.js"></script>
         <script type="text/javascript">
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-40089255-1']);
