--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
         <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="MobileOptimized" content="320"/>
         <meta name="format-detection" content="telephone=no">
-        <link rel="stylesheet" href="css/canvas.css" type="text/css" />
-        <link rel="stylesheet" href="css/toolbar.css" type="text/css" />
-        <link rel="stylesheet" href="css/stylebar.css" type="text/css" />
-        <link rel="stylesheet" href="css/shapebar.css" type="text/css" />
-        <link rel="stylesheet" href="css/main.css" type="text/css" />
-        <link rel="stylesheet" href="css/view.css" type="text/css" />
-        <link rel="stylesheet" href="css/animation.css" type="text/css" />
-        <link rel="stylesheet" href="css/preview.css" type="text/css" />
-        <link rel="stylesheet" href="css/codemirror.css" type="text/css" />
-        <link rel="stylesheet" href="css/cm.theme.css" type="text/css" />
-        <link rel="stylesheet" href="css/introjs.css" type="text/css" />
+        <link rel="stylesheet" href="./css/canvas.css" type="text/css" />
+        <link rel="stylesheet" href="./css/toolbar.css" type="text/css" />
+        <link rel="stylesheet" href="./css/stylebar.css" type="text/css" />
+        <link rel="stylesheet" href="./css/shapebar.css" type="text/css" />
+        <link rel="stylesheet" href="./css/main.css" type="text/css" />
+        <link rel="stylesheet" href="./css/view.css" type="text/css" />
+        <link rel="stylesheet" href="./css/animation.css" type="text/css" />
+        <link rel="stylesheet" href="./css/preview.css" type="text/css" />
+        <link rel="stylesheet" href="./css/codemirror.css" type="text/css" />
+        <link rel="stylesheet" href="./css/cm.theme.css" type="text/css" />
+        <link rel="stylesheet" href="./css/introjs.css" type="text/css" />
         <script type="text/javascript" src="./web.fs.mobile/src/lib/underscore.js"></script>
         <script type="text/javascript" src="./web.fs.mobile/src/lib/zepto.js"></script>
         <script type="text/javascript" src="./js/lib/codemirror/codemirror.js"></script>
@@ -35,8 +35,8 @@
         <script type="text/javascript" src="./js/core.js"></script>
         <script type="text/javascript" src="./js/sandbox.js"></script>
         <script type="text/javascript" src="./js/intro.js"></script>
-        <link rel="stylesheet" type="text/css" href="web.fs.mobile/src/theme/ui.css">
-        <link rel="stylesheet" type="text/css" href="web.fs.mobile/src/sui/sui.css">
+        <link rel="stylesheet" type="text/css" href="./web.fs.mobile/src/theme/ui.css">
+        <link rel="stylesheet" type="text/css" href="./web.fs.mobile/src/sui/sui.css">
         <style type="text/css">
             .nav-bar {height: 45px;background-color: black;position: fixed;top: 0px;width: 100%;}
             .nav-button {height: 100%;width: 80px;border: none;
