--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
             <div id="slider-preview">
                 <div id="code"></div>
             </div>
-            <div id="canvas">
-                <div class="container"></div>
+            <div id="canvas" >
+                <div class="container" data-intro='Slider editing canvas' data-step='2'></div>
                 <div id="element-attrSetting-menu" class="panel1">
                     <div class="move"></div>
                     <div class="setting-menu-head">
@@ -410,7 +410,7 @@
                     </div>
                 </div>
             </div>
-            <div id='shapebar' class="transition-r allow" data-intro='图形工具栏' data-step='2' data-position='left'>
+            <div id='shapebar' class="transition-r allow" data-intro='图形工具栏' data-step='3' data-position='left'>
                 <div id='triangle' class='shape-icon' data-type='triangle' data-title="shape_triangle"></div>
                 <div id='circular' class='shape-icon' data-type='circular' data-title="shape_circular"></div>
                 <div id='rectangle' class='shape-icon' data-type='rectangle' data-title="shape_rectangle"></div>
@@ -421,7 +421,7 @@
                 <div id='polygon' class='shape-icon' data-type='polygon' data-title="shape_polygon"></div>
                 <div id='customShape' class='shape-icon' data-type='custom'  data-title="shape_doodle"></div>
             </div>
-            <div id="toolbar" class="transition-l allow">
+            <div id="toolbar" class="transition-l allow"  data-intro='operation tool bar' data-step='1' data-position="right">
                 <div id="tool-buttons">
                     <div id="tool-enterPreviewMode" class="tool-app" data-title="toolBar_save"></div>
                     <!--<div id="tool-addslider" class="tool-app" data-title="添加新的幻灯片" data-intro='添加新的幻灯片' data-step='6'></div>-->
@@ -448,12 +448,12 @@
                     <!--
                     <div id="tool-deleteSlider" class="tool-app" data-title="删除当前幻灯片" data-intro='删除当前幻灯片' data-step='16'></div>
                     -->
-<!--                     <div id="tool-help" class="tool-app" data-title="帮助" data-intro='帮助' data-step='15'></div> -->
+                    <div id="tool-help" class="tool-app" data-title="帮助"></div>
                 </div>
                 <div></div>
             </div>
             <!--工具栏详细操作菜单-->
-            <div id="tool-operation" class='panel1 dp-none'>
+            <div id="tool-operation" class='panel1 dp-none' >
                 <div id="tool-addAnimation-operation" class="tool-app-items">
                     <div class="operation-item" data-event="changeSliderAnim" data-param="none" data-lang="anim_slider">幻灯片</div>
                     <div class="operation-item" data-event="changeSliderAnim" data-param="anim-scale" data-lang="anim_sliderZoom">放大</div>
@@ -467,7 +467,7 @@
                 <div class='menu-item' data-type='insert' data-event='addSlider' data-lang="viewMenu_insert">插入</div>
                 <div class='menu-item' data-type='delete' data-event='deleteSlider' data-lang="viewMenu_delete">删除</div>
             </div>
-            <div id="view" class="cf flb-box">
+            <div id="view" class="cf flb-box"  data-intro='Slider editing canvas' data-step='4' data-position="top">
                 <div class="flb-p1"></div>
                 <!-- <div class=""> -->
                     <div id="frame-list" class="cf anim-move-left "></div>
@@ -482,13 +482,13 @@
         <div id='mask' style="position:relative;background-color:black;width:100%;height:100%;" class="dp-none">
             <div style='position:relative;width:340px;height:100px;margin:auto;top:100px;' class='cf'>
                 <!-- chrome -->
-                <a href="http://www.google.cn/intl/zh-CN/chrome/browser/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/chrome.png);float:left;margin-right:20px' title='谷歌chrome浏览器'></a>
+                <a href="http://www.google.cn/intl/zh-CN/chrome/browser/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/chrome.png);float:left;margin-right:20px' title='谷歌chrome浏览器' data-lang="browser_chrome"></a>
                 <!-- liebao -->
-                <a href="http://www.liebao.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/lbchrome.png);float:left;margin-right:20px' title='猎豹浏览器极速模式'></a>
+                <a href="http://www.liebao.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/lbchrome.png);float:left;margin-right:20px' data-lang="browser_LieBao" title='猎豹浏览器极速模式'></a>
                 <!-- 360 chrome -->
-                <a href="http://chrome.360.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/360chrome.png);float:left;' title='360 极速浏览器'></a>
+                <a href="http://chrome.360.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/360chrome.png);float:left;' data-lang="browser_360" title='360 极速浏览器'></a>
             </div>
-            <center style='position:relative;font-size:36px;color:white;top:200px;'>请使用最新版本的chrome系列极速浏览器</center>
+            <center style='position:relative;font-size:36px;color:white;top:200px;' data-lang="browser_notice">请使用最新版本的chrome系列极速浏览器</center>
         </div>
         <!-- cordova for mobile is used by phonegap -->
 
