--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <!--
                     <div id="tool-deleteSlider" class="tool-app" data-title="删除当前幻灯片" data-intro='删除当前幻灯片' data-step='16'></div>
                     -->
-                    <div id="tool-help" class="tool-app" data-title="帮助"></div>
+                    <div id="tool-help" class="tool-app" data-title="toolBar_help"></div>
                 </div>
                 <div></div>
             </div>
