--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div id="alert-box">
                 <span class="alert-content"></span>
             </div>
-            <div id="message-box">
+            <div id="message-box" class="dp-none">
                 <span class="message-content"></span>
             </div>
             <div id="slider-preview">
