--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
             </div>
             <!-- Global Notify PopBox -->
             <div class="sui-popbox sui-disp-none" data-vertical='center' data-position='fixed' data-transition=true data-cancel=true id="notifyBox" style='z-index:9999;'>
-                <div class="sui-popbox-mask sui-popbox-mask-transparent"></div>
-                <div class="sui-popbox-box sui-popbox-black">
+                <!--  sui-popbox-mask-transparent -->
+                <div class="sui-popbox-mask"></div>
+                <div class="sui-popbox-box sui-popbox-black sui-w-custom">
                     <div class="sui-popbox-content">
                         <center id="notifyMsg" class="sui-mg-top"></center>
                     </div>
