update intro msg

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     </div>
                 </div>
             </div>
-            <div id='shapebar' class="transition-r allow" data-intro='图形工具栏' data-step='3' data-position='left'>
+            <div id='shapebar' class="transition-r allow" data-intro='Shapes lib toolbar' data-step='3' data-position='left'>
                 <div id='triangle' class='shape-icon' data-type='triangle' data-title="shape_triangle"></div>
                 <div id='circular' class='shape-icon' data-type='circular' data-title="shape_circular"></div>
                 <div id='rectangle' class='shape-icon' data-type='rectangle' data-title="shape_rectangle"></div>
@@ -468,7 +468,7 @@
                 <div class='menu-item' data-type='insert' data-event='addSlider' data-lang="viewMenu_insert">插入</div>
                 <div class='menu-item' data-type='delete' data-event='deleteSlider' data-lang="viewMenu_delete">删除</div>
             </div>
-            <div id="view" class="cf flb-box"  data-intro='Slider editing canvas' data-step='4' data-position="top">
+            <div id="view" class="cf flb-box" data-intro='Slider editing canvas' data-step='4' data-position="top">
                 <div class="flb-p1"></div>
                 <!-- <div class=""> -->
                     <div id="frame-list" class="cf anim-move-left "></div>
