reduce edit-toolbar icon size and optimize selection show toolbar logic

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="colorSelector" id="colorSelector"></div>
                 <div id="execCommand-detail" class="panel1 dp-none">
                     <!-- <div class="close-menu" data-title="btn_close"></div> -->
-                    <div class="flb-box mg-tb10">
+                    <div class="flb-box">
                         <div class="execCommand-item font-family">
                             <select class="execC-but" onchange="if(this.value!=-1) document.execCommand('fontName',false,this.value);">
                                 <option value="-1"  data-lang="textbar_fontFamily">选择字体</option>
@@ -168,7 +168,7 @@
                         </div>        
                         
                     </div>
-                    <div class="flb-box mg-tb10">
+                    <div class="flb-box">
 
                         <div class="execCommand-item font-italic" title="斜体" data-isFeed="true">
                             <a href="javascript:;" class="execC-but" data-action="document.execCommand('italic',false);"></a>
