add slider copy and paste function

--- a/index.html
+++ b/index.html
@@ -469,6 +469,8 @@
                 </div>
                 <div id='frame_view_menu' class='panel1 dp-none view-menu'>
                     <div class='menu-item' data-type='create' data-event='addSlider' data-lang="viewMenu_create">新建</div>
+                    <div class='menu-item' data-type='copy' data-event='copySlider' data-lang="viewMenu_copy">复制</div>
+                    <div class='menu-item' data-type='paste' data-event='pasteSlider' data-lang="viewMenu_paste">粘贴</div>
                     <div class='menu-item' data-type='insert' data-event='addSlider' data-lang="viewMenu_insert">插入</div>
                     <div class='menu-item' data-type='delete' data-event='deleteSlider' data-lang="viewMenu_delete">删除</div>
                 </div>
