fix bug:anim name and dd-edit and play position diff

--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
                     <div id="tool-addAnimation-operation" class="tool-app-items">
                         <div class="operation-item" data-event="changeSliderAnim" data-param="none" data-lang="anim_slider">幻灯片</div>
                         <div class="operation-item" data-event="changeSliderAnim" data-param="anim-scale" data-lang="anim_sliderZoom">放大</div>
-                        <div class="operation-item" data-event="changeSliderAnim" data-param="anim-xSpin" data-lang="anim_rotateLeft">向左旋转</div>
-                        <div class="operation-item" data-event="changeSliderAnim" data-param="anim-ySpin" data-lang="anim_rotateRight">向右旋转</div>
+                        <div class="operation-item" data-event="changeSliderAnim" data-param="anim-ySpin" data-lang="anim_rotateLeft">向左旋转</div>
+                        <div class="operation-item" data-event="changeSliderAnim" data-param="anim-xSpin" data-lang="anim_rotateRight">向右旋转</div>
                         <div class="operation-item" data-event="changeSliderAnim" data-param="anim-rightRotate" data-lang="anim_reverse">翻转</div>
                     </div>
                 </div>
