--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <div id="mapEditingContainer" class='panel1 dp-none op-full'>
             <div class='close-menu' data-title='btn_close'></div>
             <div class='confirm-btn' title="Save edits"></div>
+            <div class='reset-btn' title="Reset edits"></div>
             <div class="impressContainer"></div>
         </div>
         <div id="filesystem" class="sui-disp-none">
