update use chrome notice

--- a/index.html
+++ b/index.html
@@ -496,13 +496,13 @@
         <div id='mask' style="position:relative;background-color:black;width:100%;height:100%;" class="dp-none">
             <div style='position:relative;width:340px;height:100px;margin:auto;top:100px;' class='cf'>
                 <!-- chrome -->
-                <a href="http://www.google.cn/intl/zh-CN/chrome/browser/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/chrome.png);float:left;margin-right:20px' title='谷歌chrome浏览器' data-lang="browser_chrome"></a>
+                <a href="http://www.google.cn/intl/zh-CN/chrome/browser/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/chrome.png);float:left;margin-right:20px' title='Chrome browser' data-title="browser_chrome"></a>
                 <!-- liebao -->
-                <a href="http://www.liebao.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/lbchrome.png);float:left;margin-right:20px' data-lang="browser_LieBao" title='猎豹浏览器极速模式'></a>
+                <a href="http://www.liebao.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/lbchrome.png);float:left;margin-right:20px' data-title="browser_LieBao" title='LieBao chrome browser'></a>
                 <!-- 360 chrome -->
-                <a href="http://chrome.360.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/360chrome.png);float:left;' data-lang="browser_360" title='360 极速浏览器'></a>
+                <a href="http://chrome.360.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/360chrome.png);float:left;' data-title="browser_360" title="360 chrome browser"></a>
             </div>
-            <center style='position:relative;font-size:36px;color:white;top:200px;' data-lang="browser_notice">请使用最新版本的chrome系列极速浏览器</center>
+            <center style='position:relative;font-size:36px;color:white;top:200px;' data-lang="browser_notice" title="Please use lastest chrome browser for you best experience">请使用最新版本的chrome系列极速浏览器</center>
         </div>
         <!-- cordova for mobile is used by phonegap -->
 
