--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Slider ---by CoSu</title>
-        <link rel="shortcut icon" href="imper.png" type="image/png">
+        <link rel="shortcut icon" href="photo_2.png" type="image/png">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="MobileOptimized" content="320"/>
