update textbox style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="MobileOptimized" content="320"/>
         <meta name="format-detection" content="telephone=no">
+        <link rel="stylesheet" href="./css/impress-demo.css" type="text/css" />
         <link rel="stylesheet" href="./css/base.css" type="text/css" />
         <link rel="stylesheet" href="./css/canvas.css" type="text/css" />
         <link rel="stylesheet" href="./css/toolbar.css" type="text/css" />
